# py-stacktrace

./: README.md  pyproject.toml
src/philiprehberger_stacktrace/: __init__.py
tests/: test_stacktrace.py
