[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-stacktrace"
version = "0.1.1"
description = "Turn Python stack traces into cleaner, more readable output"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["stacktrace", "traceback", "exception", "error", "debug"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-stacktrace#readme"
Repository = "https://github.com/philiprehberger/py-stacktrace"
Issues = "https://github.com/philiprehberger/py-stacktrace/issues"
Changelog = "https://github.com/philiprehberger/py-stacktrace/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_stacktrace"]
